--- a/source/subtex.css
+++ b/source/subtex.css
@@ -4,3 +4,18 @@
 .emph {
   font-style: italic;
 }
+.scenebreak {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
+
+}
+
+.todo {
+  color: red;
+  font-style: bold;
+  display: block;
+}
